@@ -1,3 +1,9 @@
+2004-03-19  Alan Modra  <amodra@bigpond.net.au>
+
+	* Makefile.am: Run "make dep-am".
+	* Makefile.in: Regenerate.
+	* gconfig.in: Regenerate.
+	* po/gprof.pot: Regenerate.
 
 For older changes see ChangeLog-9203
 
